--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,9 +1,7 @@
-require:
-  - rubocop-rspec
-
 AllCops:
   TargetRubyVersion: 3.0
   NewCops: enable
+  SuggestExtensions: false
 
 Style/Documentation:
   Enabled: false
@@ -17,15 +15,3 @@ Metrics/AbcSize:
 Metrics/BlockLength:
   Exclude:
     - "spec/**/*"
-
-RSpec/MultipleExpectations:
-  Enabled: false
-
-RSpec/ExampleLength:
-  Enabled: false
-
-RSpec/VerifiedDoubles:
-  Enabled: false
-
-RSpec/IdenticalEqualityAssertion:
-  Enabled: false
