--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -15,3 +15,9 @@ Metrics/AbcSize:
 Metrics/BlockLength:
   Exclude:
     - "spec/**/*"
+
+Lint/UselessAccessModifier:
+  ContextCreatingMethods:
+    - class_methods
+  MethodCreatingMethods:
+    - included
