--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,14 +15,12 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        ruby: ['3.0', '3.1', '3.2', '3.3']
-        rails: ['7.0', '7.1', '7.2', '8.0']
-        exclude:
+        include:
           - ruby: '3.0'
-            rails: '7.2'
-          - ruby: '3.0'
-            rails: '8.0'
-          - ruby: '3.1'
+            rails: '7.0'
+          - ruby: '3.2'
+            rails: '7.1'
+          - ruby: '3.3'
             rails: '8.0'
 
     name: Ruby ${{ matrix.ruby }} / Rails ${{ matrix.rails }}
