feat!: v2.0 - block-based Trail API with Ruby 3.2+
BREAKING CHANGES:
- Complete API redesign with block-based Trail object
- Ruby 3.2+ required (was 3.0+)

See CHANGELOG.md for migration guide and full API documentation.

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,23 +1,25 @@
 AllCops:
-  TargetRubyVersion: 3.0
+  TargetRubyVersion: 3.2
   NewCops: enable
   SuggestExtensions: false
 
-Style/Documentation:
+Lint/UselessMethodDefinition:
   Enabled: false
-
-Metrics/MethodLength:
-  Max: 15
-
-Metrics/AbcSize:
-  Max: 20
-
-Metrics/BlockLength:
-  Exclude:
-    - "spec/**/*"
 
 Lint/UselessAccessModifier:
   ContextCreatingMethods:
     - class_methods
   MethodCreatingMethods:
     - included
+
+Naming/PredicatePrefix:
+  AllowedMethods:
+    - have_breadcrumb
+    - have_breadcrumbs
+
+Metrics/BlockLength:
+  Exclude:
+    - 'spec/**/*'
+
+Style/Documentation:
+  Enabled: false
