--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,11 +16,11 @@ jobs:
       fail-fast: false
       matrix:
         include:
-          - ruby: '3.0'
-            rails: '7.0'
           - ruby: '3.2'
-            rails: '7.1'
+            rails: '7.0'
           - ruby: '3.3'
+            rails: '7.1'
+          - ruby: '3.4'
             rails: '8.0'
 
     name: Ruby ${{ matrix.ruby }} / Rails ${{ matrix.rails }}
@@ -40,6 +40,13 @@ jobs:
       - name: Run tests
         run: bundle exec rspec
 
+      - name: Upload coverage report
+        if: matrix.ruby == '3.4' && matrix.rails == '8.0'
+        uses: actions/upload-artifact@v4
+        with:
+          name: coverage-report
+          path: coverage/
+
   lint:
     runs-on: ubuntu-latest
     steps:
@@ -48,7 +55,7 @@ jobs:
       - name: Set up Ruby
         uses: ruby/setup-ruby@v1
         with:
-          ruby-version: '3.3'
+          ruby-version: '3.4'
           bundler-cache: true
 
       - name: Run RuboCop
@@ -62,7 +69,7 @@ jobs:
       - name: Set up Ruby
         uses: ruby/setup-ruby@v1
         with:
-          ruby-version: '3.3'
+          ruby-version: '3.4'
           bundler-cache: true
 
       - name: Install bundler-audit
